--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==38.0.1
 defusedxml==0.7.1
+dj-database-url==1.0.0
 Django==4.1.1
 django-phonenumber-field==6.4.0
 django-phonenumbers==1.0.1
@@ -15,6 +16,7 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-yasg==1.21.3
+gunicorn==20.1.0
 idna==3.3
 inflection==0.5.1
 itypes==1.2.0
@@ -24,6 +26,7 @@ oauthlib==3.2.0
 openapi-codec==1.3.2
 packaging==21.3
 phonenumbers==8.12.54
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
 pyparsing==3.0.9
